[gd_scene load_steps=37 format=3 uid="uid://ckkcmvsvvfgc1"]

[ext_resource type="Script" uid="uid://bfu4xs3tyne55" path="res://scripts/Character/Character.gd" id="1_ygbqy"]
[ext_resource type="Script" uid="uid://byikc5yvpboxi" path="res://scripts/Attributes/PlayerStats.gd" id="2_mlovc"]
[ext_resource type="Texture2D" uid="uid://coin7rkxo0n0g" path="res://assets/sprites/Isaiah_Running_Spritesheet.png" id="3_6a57c"]
[ext_resource type="Script" uid="uid://c1fthtfbmc1rp" path="res://scripts/States/StateMachine.gd" id="5_hxk54"]
[ext_resource type="Script" uid="uid://dqbuikgdb37hh" path="res://scripts/States/Isaiah_States/Isaiah_Idle_State.gd" id="6_6a57c"]
[ext_resource type="Script" uid="uid://du6f854sxc232" path="res://scripts/States/Isaiah_States/Isaiah_Attack.gd" id="7_4w020"]
[ext_resource type="Script" uid="uid://csfwrb23066js" path="res://scripts/States/Isaiah_States/Isaiah_Falling_State.gd" id="8_xsbw6"]
[ext_resource type="Script" uid="uid://y34smlvlmjip" path="res://scripts/States/Isaiah_States/Isaiah_Jumping_State.gd" id="9_ygbqy"]
[ext_resource type="Script" uid="uid://bp6munqpvc0sc" path="res://scripts/States/Isaiah_States/Isaiah_Running_State.gd" id="10_mlovc"]
[ext_resource type="Script" uid="uid://dp74djouk71ts" path="res://scripts/StatusEffects/Status_Effect_Manager.gd" id="14_3hpv0"]
[ext_resource type="Script" uid="uid://lbreutrqdu6t" path="res://scripts/Health/health.gd" id="15_wts33"]
[ext_resource type="Texture2D" uid="uid://be4vuo0hak4m" path="res://assets/placeholder128.png" id="16_blkku"]
[ext_resource type="Texture2D" uid="uid://d1bsqlqgynylv" path="res://assets/pixie_dust.png" id="17_t2ft1"]

[sub_resource type="Resource" id="Resource_r68wp"]
script = ExtResource("2_mlovc")
_acceleration = 30.0
_deacceleration = 70.0
max_speed = 300.0
in_air_acceleration = 20.0
in_air_deacceleration = 20.0
jump_force = -450.0
_gravity = 1000.0
falling_gravity = 1500.0
coyote_time = 0.1
jump_buffer_time = 0.1
variable_jump_multiplier = 0.5
max_falling_speed = 50.0
metadata/_custom_type_script = "uid://byikc5yvpboxi"

[sub_resource type="AtlasTexture" id="AtlasTexture_6jepx"]
atlas = ExtResource("3_6a57c")
region = Rect2(639, 506, 213, 253)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w020"]
atlas = ExtResource("3_6a57c")
region = Rect2(426, 506, 213, 253)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsbw6"]
atlas = ExtResource("3_6a57c")
region = Rect2(213, 0, 213, 253)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygbqy"]
atlas = ExtResource("3_6a57c")
region = Rect2(426, 0, 213, 253)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlovc"]
atlas = ExtResource("3_6a57c")
region = Rect2(639, 0, 213, 253)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gume"]
atlas = ExtResource("3_6a57c")
region = Rect2(0, 253, 213, 253)

[sub_resource type="AtlasTexture" id="AtlasTexture_yte68"]
atlas = ExtResource("3_6a57c")
region = Rect2(213, 253, 213, 253)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxk54"]
atlas = ExtResource("3_6a57c")
region = Rect2(426, 253, 213, 253)

[sub_resource type="AtlasTexture" id="AtlasTexture_padyh"]
atlas = ExtResource("3_6a57c")
region = Rect2(639, 253, 213, 253)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2egd"]
atlas = ExtResource("3_6a57c")
region = Rect2(0, 506, 213, 253)

[sub_resource type="AtlasTexture" id="AtlasTexture_unqyf"]
atlas = ExtResource("3_6a57c")
region = Rect2(213, 506, 213, 253)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgw53"]
atlas = ExtResource("3_6a57c")
region = Rect2(426, 506, 213, 253)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijjvx"]
atlas = ExtResource("3_6a57c")
region = Rect2(639, 506, 213, 253)

[sub_resource type="AtlasTexture" id="AtlasTexture_sa2vg"]
atlas = ExtResource("3_6a57c")
region = Rect2(0, 759, 213, 253)

[sub_resource type="AtlasTexture" id="AtlasTexture_2joju"]
atlas = ExtResource("3_6a57c")
region = Rect2(213, 759, 213, 253)

[sub_resource type="AtlasTexture" id="AtlasTexture_drng4"]
atlas = ExtResource("3_6a57c")
region = Rect2(426, 759, 213, 253)

[sub_resource type="SpriteFrames" id="SpriteFrames_3hpv0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jepx")
}],
"loop": true,
"name": &"Falling",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"Heavy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w020")
}],
"loop": true,
"name": &"Idle",
"speed": 24.0
}, {
"frames": [],
"loop": true,
"name": &"Light",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"Medium",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsbw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygbqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlovc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gume")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yte68")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_hxk54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_padyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2egd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unqyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgw53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijjvx")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_sa2vg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2joju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drng4")
}],
"loop": true,
"name": &"Running",
"speed": 18.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ksmjn"]
size = Vector2(24, 56)

[sub_resource type="CircleShape2D" id="CircleShape2D_dfeyu"]
radius = 16.1245

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_6jepx"]
load_path = "res://.godot/imported/pixie_dust.png-1e971e21530a07dbf2ab0756da0f4361.ctex"

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6a57c"]
particle_flag_disable_z = true
angle_min = -261.1
angle_max = 180.0
direction = Vector3(-1, -1, 0)
initial_velocity_min = 10.0
initial_velocity_max = 50.0
scale_min = 0.05
scale_max = 0.05

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ftwfq"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(0, 1, 1)
angle_min = 1.07288e-05
angle_max = 90.0
direction = Vector3(0, 1, 0)
spread = 90.0
initial_velocity_min = 10.0
initial_velocity_max = 60.0
gravity = Vector3(0, 98, 0)
scale_min = 0.05
scale_max = 0.05

[node name="Isaiah" type="CharacterBody2D" node_paths=PackedStringArray("state_machine", "status_manager", "health_component") groups=["player"]]
light_mask = 524288
script = ExtResource("1_ygbqy")
stats = SubResource("Resource_r68wp")
state_machine = NodePath("StateMachine")
status_manager = NodePath("StatusEffectManager")
health_component = NodePath("Health")
metadata/_edit_horizontal_guides_ = [-86.0]

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 524288
texture_filter = 1
position = Vector2(0, -2)
scale = Vector2(0.35, 0.35)
sprite_frames = SubResource("SpriteFrames_3hpv0")
animation = &"Falling"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_ksmjn")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("5_hxk54")
metadata/_custom_type_script = "uid://c1fthtfbmc1rp"

[node name="Idle_State" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("6_6a57c")
player = NodePath("../..")
metadata/_custom_type_script = "uid://dqbuikgdb37hh"

[node name="Attack_State" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "attack_hitbox", "attack_collision", "debug")]
script = ExtResource("7_4w020")
player = NodePath("../..")
attack_hitbox = NodePath("../../DealDamageArea")
attack_collision = NodePath("../../DealDamageArea/CollisionShape2D")
debug = NodePath("../../DealDamageArea/Sprite2D")
metadata/_custom_type_script = "uid://du6f854sxc232"

[node name="Falling_State" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("8_xsbw6")
player = NodePath("../..")
metadata/_custom_type_script = "uid://csfwrb23066js"

[node name="Jumping_State" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "particles")]
script = ExtResource("9_ygbqy")
player = NodePath("../..")
particles = NodePath("../../JumpParticles")
metadata/_custom_type_script = "uid://y34smlvlmjip"

[node name="Running_State" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "particles")]
script = ExtResource("10_mlovc")
player = NodePath("../..")
particles = NodePath("../../DirectionChangeParticles")
metadata/_custom_type_script = "uid://bp6munqpvc0sc"

[node name="StatusEffectManager" type="Node" parent="."]
script = ExtResource("14_3hpv0")
metadata/_custom_type_script = "uid://dp74djouk71ts"

[node name="Health" type="Node" parent="."]
script = ExtResource("15_wts33")

[node name="DealDamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DealDamageArea"]
position = Vector2(32, 0)
shape = SubResource("CircleShape2D_dfeyu")

[node name="Sprite2D" type="Sprite2D" parent="DealDamageArea"]
position = Vector2(32, 0)
scale = Vector2(0.25, 0.25)
texture = ExtResource("16_blkku")
hframes = 14
vframes = 16

[node name="Label" type="Label" parent="."]
offset_left = -21.3335
offset_top = -64.0
offset_right = 18.6665
offset_bottom = -41.0
metadata/_edit_lock_ = true

[node name="DirectionChangeParticles" type="GPUParticles2D" parent="."]
modulate = Color(1, 0.24, 0.24, 1)
position = Vector2(0, 32)
emitting = false
amount = 20
texture = SubResource("CompressedTexture2D_6jepx")
lifetime = 0.2
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_6a57c")

[node name="JumpParticles" type="GPUParticles2D" parent="."]
modulate = Color(1, 0.239216, 0.239216, 1)
texture_filter = 1
position = Vector2(0, 32)
emitting = false
amount = 20
texture = ExtResource("17_t2ft1")
lifetime = 0.2
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_ftwfq")
